--- a/index.html
+++ b/index.html
@@ -2,11 +2,21 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Puls2014</title>
+	<meta description="Proyecto de curso web online de mejorandola" />
+	<title>Puls2014 | Comunidad online de gente atractiva de la web.</title>
+	<link rel="stylesheet" href="normalize.css">
+	<link rel="stylesheet" href="animate.css">
+	<link rel="stylesheet" href="main.css">
 </head>
 <body>
 	<header>
-		
+		<figure id="logo">
+			<img src="logo.png" alt="">
+		</figure>
+		<h1>Puls2014: Comunidad de personas atractivas y elegantes</h1>
+		<figure id="avatar">
+			<img src="avatar.jpg" alt="">
+		</figure>		
 	</header>
 	<nav>
 		
