--- a/index.html
+++ b/index.html
@@ -1,22 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-	<meta charset="UTF-8">
-	<meta description="Proyecto de curso web online de mejorandola" />
-	<title>Puls2014 | Comunidad online de gente atractiva de la web.</title>
-	<link rel="stylesheet" href="normalize.css">
-	<link rel="stylesheet" href="animate.css">
-	<link rel="stylesheet" href="main.css">
+	<meta charset="utf-8" />
+	<meta name="description" content="Proyecto de la primera generación del 2014 del curso de diseño web online" />
+	<meta name="viewport" content="width=device-width, minimum-scale=1, maximum-scale=1"/>
+	<title>Puls2014: Comunidad de personas atractivas y sexy</title>
+	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" href="normalize.css" />
+	<link rel="stylesheet" href="estilos.css" />
+	<script src="prefixfree.js"></script>
 </head>
 <body>
 	<header>
 		<figure id="logo">
-			<img src="logo.png" alt="">
+			<img src="logo.png" />
 		</figure>
-		<h1>Puls2014: Comunidad de personas atractivas y elegantes</h1>
+		<h1>
+			Puls2014: Comunidad de personas atractivas y sexy
+		</h1>
 		<figure id="avatar">
-			<img src="avatar.jpg" alt="">
-		</figure>		
+			<img src="avatar.jpg" />
+		</figure>
 	</header>
 	<nav>
 		<ul>
@@ -26,10 +30,22 @@
 			<li><a href="#">CSS3</a></li>
 			<li><a href="#">Django</a></li>
 			<li id="publicar_nav">
-				<a href="#">Publicar</a>
+				<a href="#" class="icon-lapiz" id="mostrar-form">Publicar</a>
 			</li>
 		</ul>
 	</nav>
+	<form action="" id="formulario" class="formulario">
+		<input type="text" id="titulo" placeholder="Título" required>
+		<input type="url" id="url" placeholder="Link" required>
+		<input type="submit" value="Agregar">
+	</form>
+	<aside>
+		<video width="320" height="240" controls autoplay>
+			<source src="lecturas.mp4" type="video/mp4">
+			<source src="lecturas.ogg" type="video/ogg">
+			<!-- Actualiza tu navegador -->
+		</video>
+	</aside>
 	<section id="contenido">
 		<article class="item">
 			<figure class="imagen_item">
@@ -50,11 +66,11 @@
 				</span>
 			</div>
 			<div class="votacion">
-				<a href="#" class="up">U</a>
+				<a href="#" class="up icon-flecha-arriba"></a>
 				720
-				<a href="#" class="down">D</a>
+				<a href="#" class="down icon-flecha-abajo"></a>
 				<a href="#" class="comentarios_item">69</a>
-				<a href="#" class="guardar_item">X</a>
+				<a href="#" class="guardar_item icon-estrella"></a>
 			</div>
 		</article>
 		<article class="item">
@@ -76,11 +92,11 @@
 				</span>
 			</div>
 			<div class="votacion">
-				<a href="#" class="up">U</a>
+				<a href="#" class="up icon-flecha-arriba"></a>
 				720
-				<a href="#" class="down">D</a>
+				<a href="#" class="down icon-flecha-abajo"></a>
 				<a href="#" class="comentarios_item">69</a>
-				<a href="#" class="guardar_item">X</a>
+				<a href="#" class="guardar_item icon-estrella"></a>
 			</div>
 		</article>
 		<article class="item">
@@ -102,11 +118,11 @@
 				</span>
 			</div>
 			<div class="votacion">
-				<a href="#" class="up">U</a>
+				<a href="#" class="up icon-flecha-arriba"></a>
 				720
-				<a href="#" class="down">D</a>
+				<a href="#" class="down icon-flecha-abajo"></a>
 				<a href="#" class="comentarios_item">69</a>
-				<a href="#" class="guardar_item">X</a>
+				<a href="#" class="guardar_item icon-estrella"></a>
 			</div>
 		</article>
 		<article class="item">
@@ -128,11 +144,11 @@
 				</span>
 			</div>
 			<div class="votacion">
-				<a href="#" class="up">U</a>
+				<a href="#" class="up icon-flecha-arriba"></a>
 				720
-				<a href="#" class="down">D</a>
+				<a href="#" class="down icon-flecha-abajo"></a>
 				<a href="#" class="comentarios_item">69</a>
-				<a href="#" class="guardar_item">X</a>
+				<a href="#" class="guardar_item icon-estrella"></a>
 			</div>
 		</article>
 		<article class="item">
@@ -154,11 +170,11 @@
 				</span>
 			</div>
 			<div class="votacion">
-				<a href="#" class="up">U</a>
+				<a href="#" class="up icon-flecha-arriba"></a>
 				720
-				<a href="#" class="down">D</a>
+				<a href="#" class="down icon-flecha-abajo"></a>
 				<a href="#" class="comentarios_item">69</a>
-				<a href="#" class="guardar_item">X</a>
+				<a href="#" class="guardar_item icon-estrella"></a>
 			</div>
 		</article>
 		<article class="item">
@@ -180,11 +196,11 @@
 				</span>
 			</div>
 			<div class="votacion">
-				<a href="#" class="up">U</a>
+				<a href="#" class="up icon-flecha-arriba"></a>
 				720
-				<a href="#" class="down">D</a>
+				<a href="#" class="down icon-flecha-abajo"></a>
 				<a href="#" class="comentarios_item">69</a>
-				<a href="#" class="guardar_item">X</a>
+				<a href="#" class="guardar_item icon-estrella"></a>
 			</div>
 		</article>
 	</section>
@@ -196,5 +212,21 @@
 			mejorando.la 2014
 		</p>
 	</footer>
+	<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+	<script src="formulario.js"></script>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
